src/test/ui/wf/wf-trait-default-fn-where-clause.stderr
error[E0277]: the trait bound `Self: std::cmp::Eq` is not satisfied
  --> $DIR/wf-trait-default-fn-where-clause.rs:21:5
   |
LL | /     fn bar<A>(&self) where A: Bar<Self> {
LL | |         //~^ ERROR E0277
LL | |         //
LL | |         // Here, Eq ought to be implemented.
LL | |     }
   | |_____^ the trait `std::cmp::Eq` is not implemented for `Self`
   |
   = help: consider adding a `where Self: std::cmp::Eq` bound
note: required by `Bar`
  --> $DIR/wf-trait-default-fn-where-clause.rs:18:1
   |
LL | trait Bar<T:Eq+?Sized> { }
   | ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
